WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130873
[WK2][iOS] <
rdar://problem/16414684
> WKWebView should draw a white background before the page loads
https://bugs.webkit.org/show_bug.cgi?id=130873
Summary
[WK2][iOS] <rdar://problem/16414684> WKWebView should draw a white background...
Benjamin Poulain
Reported
2014-03-27 16:34:45 PDT
[WK2][iOS] <
rdar://problem/16414684
> WKWebView should draw a white background before the page loads
Attachments
Patch
(1.33 KB, patch)
2014-03-27 16:35 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-03-27 16:35:28 PDT
Created
attachment 228005
[details]
Patch
Benjamin Poulain
Comment 2
2014-03-27 16:37:59 PDT
Comment on
attachment 228005
[details]
Patch Clearing flags on attachment: 228005 Committed
r166382
: <
http://trac.webkit.org/changeset/166382
>
Benjamin Poulain
Comment 3
2014-03-27 16:38:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug