[WK2][iOS] <rdar://problem/16414684> WKWebView should draw a white background before the page loads https://bugs.webkit.org/show_bug.cgi?id=130873

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-03-27
Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView initWithFrame:configuration:]):


Canonical link: https://commits.webkit.org/148898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166382 268f45cc-cd09-0410-ab3c-d52691b4dbfc